# snapnet

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.json  sem3d_gen_images.py  sem3d_test_backproj.py  sem3d_test_backproj_tf.py  sem3d_test_gen_images.py  sem3d_test_to_sem3D_labels.py  sem3d_train.py  sem3d_train_gen_images.py  sem3d_train_tf.py  sem3d_train_th.py
cmake/: UseCython.cmake
include/: Normals.h  Sem3D.h  Semantic3D.pxd  c_sem3D.pxd  pointCloud.h  pointCloudLabels.h
pointcloud_tools/: Normals.h  Sem3D.cxx  Sem3D.h  Semantic3D.cpp  Semantic3D.pyx  pointCloud.cxx  pointCloud.h  pointCloudLabels.cxx  pointCloudLabels.h  setup.py
python/: imageGenerator.py  tensorflow_tester_backprojeter.py  tensorflow_trainer.py  tensorflow_trainer_finetune.py  tensorflow_trainer_fusion.py  viewGenerator.py
python/models/: VGG_ILSVRC_16_layers.py  tensorflow_residual_fusion.py  tensorflow_unet.py
python/pytorch/: pytorch_tester_backprojeter.py  pytorch_tester_fusion.py  pytorch_trainer.py  pytorch_trainer_fusion.py
python/pytorch/models/: net_fusion.py  net_unet.py
python/tf/: tensorflow_tester_backprojeter.py  tensorflow_trainer.py
python/tf/models/: tensorflow_unet.py
semantic3D_utils/: Normals.h  Sem3D.cxx  Sem3D.h  Semantic3D.cpp  Semantic3D.pyx  setup.py
src/: CMakeLists.txt  Sem3D.cxx  Semantic3D.pyx  pointCloud.cxx  pointCloudLabels.cxx
